apps/navidrome/08.server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
  namespace: navidrome
  labels:
    app: navidrome
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4533
  selector:
    app: navidrome-server
